--- a/config/base.yaml
+++ b/config/base.yaml
@@ -1,5 +1,5 @@
 # Data
-data_root: /data/hanzeyu_kradar/
+data_root: ./Dense_GT/
 device: cuda
 rawdata_folder: "tensors"
 cube_folder: "labels"
@@ -30,16 +30,22 @@ fps: False
 
 
 # Train
-epoch: 100
+epoch: 1000
 batch_size: 4
 base_lr: 0.0002
 train_data: 0.8
-epochs_per_val: 10
-epochs_per_trans: 50
+epochs_per_eval: 100
+epochs_per_trans: 100
 
 
 # Post-process
-transform_thresh: [0.001,0.05,0.15,0.25,0.35,0.5,0.7,0.85,0.9,0.96]
+transform_thresh: [0.300, 0.305, 0.310, 0.315, 0.320, 0.325, 0.330, 0.335, 0.340,
+                   0.345, 0.350, 0.355, 0.360, 0.365, 0.370, 0.375, 0.380, 0.385,
+                   0.390, 0.395, 0.400, 0.405, 0.410, 0.415, 0.420, 0.425, 0.430,
+                  0.435, 0.44 , 0.445, 0.45 , 0.455, 0.46 , 0.465, 0.47 , 0.475,
+                  0.48 , 0.485, 0.49 , 0.495, 0.5  , 0.505, 0.51 , 0.515, 0.52 ,
+                  0.525, 0.53 , 0.535, 0.54 , 0.545, 0.55 , 0.555, 0.56 , 0.565,
+                  0.57 , 0.575, 0.58 , 0.585, 0.59 , 0.595, 0.6  ]
 
 
 # Evaluate
